<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/main_color1"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wemakeprice_bold"
        android:text="@string/app_name2"
        android:textColor="#FFFFFF"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/sign_up_for_hospital"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="60dp"
        android:fontFamily="@font/wemakeprice_bold"
        android:text="@string/sign_up_for_hospital"
        android:textSize="20sp"
        app:backgroundTint="@color/main_color2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/log_in_for_hospital"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:fontFamily="@font/wemakeprice_bold"
        android:text="@string/log_in_for_hospital"
        android:textSize="20sp"
        app:backgroundTint="@color/main_color2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_for_hospital" />

    <Button
        android:id="@+id/using_normal_mode"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:fontFamily="@font/wemakeprice_bold"
        android:text="@string/using_normal_mode"
        android:textSize="20sp"
        app:backgroundTint="@color/main_color2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_for_hospital" />

</androidx.constraintlayout.widget.ConstraintLayout>